kube01/apps/tools/lubelog/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: lubelog
  labels:
    app: lubelog
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: lubelog
  template:
    metadata:
      labels:
        app: lubelog
    spec:
      serviceAccountName: lubelog-sa
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: lubelogger-config-pvc
        - name: data
          persistentVolumeClaim:
            claimName: lubelogger-data-pvc
        - name: documents
          persistentVolumeClaim:
            claimName: lubelogger-docs-pvc
        - name: images
          persistentVolumeClaim:
            claimName: lubelogger-img-pvc
      containers:
        - name: lubelog
          image: harbor.nf.lab/proxy.ghcr.io/hargata/lubelogger:latest
          imagePullPolicy: Always
          ports:
            - name: lubelog-port
              containerPort: 8080
          resources:
            requests:
              cpu: "10m"
              memory: "128Mi"
          volumeMounts:
            - name: config
              mountPath: /App/config
            - name: data
              mountPath: /App/data
            - name: documents
              mountPath: /App/wwwroot/documents
            - name: images
              mountPath: /App/wwwroot/images
