kube01/apps/tools/lubelog/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: lubelog-svc
  labels:
    app: lubelog
spec:
  ports:
    - name: lubelog-svc-port
      port: 8080
  selector:
    app: lubelog
